Fix y overflow and scale the image

--- a/src/pages/Camera.scss
+++ b/src/pages/Camera.scss
@@ -1,45 +1,52 @@
 .camera-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-video, img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+	img,
+	video {
+		width: 100%;
+		height: 100%;
+		//object-fit: cover;
+		object-fit: contain;
+	}
 }
 
 .capture-button {
-    position: fixed;
-    bottom: 40px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80px; /* Adjust size as needed */
-    height: 80px;
-    background-color: white;
-    border-radius: 50%;
-    border: 6px solid rgba(255, 255, 255, 0.8); /* White outer border */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional shadow for a subtle 3D effect */
-    cursor: pointer;
+	position: fixed;
+	bottom: 40px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 80px;
+	/* Adjust size as needed */
+	height: 80px;
+	background-color: white;
+	border-radius: 50%;
+	border: 6px solid rgba(255, 255, 255, 0.8);
+	/* White outer border */
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	/* Optional shadow for a subtle 3D effect */
+	cursor: pointer;
 }
 
 .capture-button:before {
-    content: '';
-    position: absolute;
-    width: 60px;
-    height: 60px;
-    background-color: rgba(255, 255, 255, 0.9); /* Slightly dim inner circle */
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid rgba(0, 0, 0, 0.1); /* Inner thin border */
+	content: "";
+	position: absolute;
+	width: 60px;
+	height: 60px;
+	background-color: rgba(255, 255, 255, 0.9);
+	/* Slightly dim inner circle */
+	border-radius: 50%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border: 2px solid rgba(0, 0, 0, 0.1);
+	/* Inner thin border */
 }
 
 .capture-button:hover {
-    background-color: rgb(126, 125, 125);
+	background-color: rgb(126, 125, 125);
 }
